Disable smart quotes on iOS11 omnibox.

Bug: 747433, 747435, 747449
Change-Id: I7576d07b426d250d11a0728d5ecb37326729b2bc
Reviewed-on: https://chromium-review.googlesource.com/587462
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489919}
Former-commit-id: f52fa3ba3f668fd987a41c514e192241d24f6ac8